# undergrad-work

./: .gitignore
5-aa/valya/: a.py
5-complexity/: out.txt
5-db/: New Text Document.txt  lab1.sql  lab1_1_insert_divisions.sql  lab1_2_insert_rooms.sql  lab1_3_insert_abonents.sql  lab2_1_add_foreignkeys.sql  lab2_2_nocheck.sql  lab2_3_alter_column.sql  lab4.sql  lab4_output.txt  lab5.sql  lab5_pre.sql  lab7.sql  lab8.sql  lab8_pre.sql  lab9_1.sql
5-db/reports/: Lab1-3 report.docx  Lab5.docx  Lab7.docx  Lab8.docx  Lab9.docx
5-db/кр1/: кр1.tex
5-matfiz/: 0 MathPhys_2021 література+задачі.doc  Bilety МПРС 5.doc  Лекц_7_16_10_2021_ЗШЛ+розділення_змінних.doc  ФІ_Силабус_моделі_ПРС_2021_Жданов+Катасонов.doc
5-matfiz/exams/: Bilety МПРС 2021.doc  Bilety МПРС розшифровка 2021.doc
5-matfiz/try/: spherical.ipynb
5-matmod/: a.tex  matmod_mkr_koreshkov.ipynb  Лабораторна робота 2.docx
5-matmod/lab1/: Example.ipynb  Task1_v2.ipynb  untitled.md
5-matmod/lab2/: jordan-transform.ipynb  just_notes.ipynb  lab2.ipynb  out.txt  simplex1.py  simplex2.py  simplex_method_2.txt  solution.py
6-computation/RR/: rr.html  rr.ipynb
6-graphics/: Лаб_2_КГ_10_02_2022.doc  Лекція_1_КГ_01_02_2022.doc  Лекція_2_КГ_05_02_2022.docx  лаб_1_КГ_03_02_2022.doc  лаб_3_КГ_17_02_2022.docx  лек_3_КГ_18_02_2022.docx
6-graphics/lab1_c/: CMakeLists.txt  main.cpp
6-graphics/rick_astley/: CMakeLists.txt  main.cpp  triangle.cpp
6-information-coding/: L1.md  L2.md
8-applied-statistics/: notes.md
8-data-analysis/: L1.md
tex/: hw1.tex  hw6.tex  hw_template.tex  template.tex
(+247 files in other folders)
